Implement settings discovery of properties for ui types that are not ui types